@startuml

title Domain Model

hide methods
hide circle

class Agenda {
}

class AgendaEntry {
  startingDate
  progressStatus
}

class GreenSpace {
  name
  type
  size
  manager
}

class Team {
  maxNumberElements
  minNumberElements
}

class Entry {
  title
  description
  duration
  urgency
  Status
}

class Collaborator {
    name
    birthdate
    admission date
    address
    contact
    taxpayer number
    identification document
    identification number
}

Agenda "1" -- "1..*" AgendaEntry : has
AgendaEntry "*" -- "1" GreenSpace : is associated to
AgendaEntry "*" -- "1" Team : assigned to
AgendaEntry "1" -- "1" Entry : is assigned
Team "1" -- "1..*" Collaborator : has

@enduml